--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,16 +3,16 @@ name: Run tests
 on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Run tests
       - run: npm ci
       - run: npm run coverage
+      
       - name: Upload coverage to coveralls
         uses: coverallsapp/github-action@v2.3.4
 
