--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,6 @@ jobs:
       - run: npm run coverage
       
       - name: Upload coverage to coveralls
+        if: always()
         uses: coverallsapp/github-action@v2.3.4
 
